# scalaris

./: Cargo.toml  LICENSE  README.md
consensus/: Cargo.toml  build.rs
consensus/proto/: service.proto  types.proto
consensus/src/: authority.rs  checkpoints.rs  config.rs  consensus_client.rs  consensus_handler.rs  consensus_remote_client.rs  consensus_service.rs  consensus_validator.rs  lib.rs  main.rs  node.rs  post_consensus_tx_reorder.rs  signature_verifier.rs  stake_aggregator.rs  transaction_input_loader.rs
consensus/src/authority/: authority_aggregator.rs  authority_per_epoch_store.rs  authority_store.rs  metrics.rs  state.rs  test_authority_builder.rs  verify_state.rs
consensus/src/checkpoints/: checkpoint_output.rs  sui_checkpoint_mod.rs
consensus/src/checkpoints/checkpoint_executor/: mod.rs  tests.rs
consensus/src/consensus_manager/: mod.rs  mysticeti_manager.rs  narwhal_manager.rs
consensus/src/consensus_types/: address.rs  base_types.rs  consensus_output_api.rs  message_envelope.rs  messages_consensus.rs  messages_grpc.rs  mod.rs  signature_verification.rs  sui_serde.rs  transaction.rs
consensus/src/epoch/: mod.rs  randomness.rs
consensus/src/metrics/: grpc.rs
consensus/src/network/: authoriry_server.rs  authority_client.rs  mod.rs  safe_client.rs
consensus/src/proto/: mod.rs  service.rs  types.rs
consensus/src/unit_tests/: consensus_manager_tests.rs  mysticeti_manager_tests.rs  narwhal_manager_tests.rs
consensus/tests/: grpc_client.rs
docker/scalaris-network/: README.md  build.sh  build_container.sh  builder.Dockerfile  docker-compose-builder.yaml  docker-compose.yaml  genesis.Dockerfile  run.sh  runner.Dockerfile  rust.Dockerfile
docker/scalaris-network/genesis/: compose-validators.yaml  genesis.yaml
docker/scalaris-network/genesis/overlays/: common.yaml
docker/scalaris-network/genesis/static/: fullnode.yaml
execution/move/: Cargo.toml
protobuf/: Cargo.toml  build.rs  interface.proto
protobuf/src/: main.rs
