[workspace]
resolver = "2"

members = [
    "consensus"
]

[workspace.package]
version = "0.1.0"

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c101a5176799db3eb9c801b844e7add92153d291" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c101a5176799db3eb9c801b844e7add92153d291" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c101a5176799db3eb9c801b844e7add92153d291", package = "fastcrypto-zkp" }
# MystenLabs consensus 2.0 bases on Mysticeti version Jun 01, 2024
consensus-config = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "consensus-config" }
consensus-core = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "consensus-core" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "shared-crypto" }
mysten-common = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "mysten-common" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "mysten-metrics" }
mysten-network = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "mysten-network" }
sui-archival = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-archival" }
sui-config = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-config" }
sui-core = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-core" }
sui-protocol-config = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-protocol-config" }
sui-macros = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-macros" }
sui-network = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-network" }
sui-storage = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-storage" }
sui-swarm-config = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-swarm-config" }
sui-tls = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-tls" }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "sui-types" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "telemetry-subscribers" }

typed-store = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "typed-store" }
typed-store-derive = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "typed-store-derive" }
bin-version = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "bin-version" }
# For narwhal support
narwhal-config = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-config" }
narwhal-crypto = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-crypto" }
narwhal-executor = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-executor" }
narwhal-network = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-network" }
narwhal-node = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-node" }
narwhal-types = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-types" }
narwhal-worker = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-worker" }
narwhal-test-utils = { git = "https://github.com/MystenLabs/sui", rev = "14bc4d515100dfa8326e9f08b7e72335cf5467d7", package = "narwhal-test-utils" }

anyhow = "1.0.71"
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }
arc-swap = { version = "1.5.1", features = ["serde"] }
async-trait = "0.1.61"
axum = { version = "0.6.6", default-features = false, features = [
  "headers",
  "tokio",
  "http1",
  "http2",
  "json",
  "matched-path",
  "original-uri",
  "form",
  "query",
  "ws",
] }
axum-extra = "0.4.2"
axum-server = { version = "0.5.1", default-features = false, features = [
  "tls-rustls",
] }
base64 = "0.21.2"
bcs = "0.1.4"
byteorder = "1.4.3"
bytes = { version = "1.5.0", features = ["serde"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
dashmap = "5.5.3"
either = "1.8.0"
enum_dispatch = "^0.3"
eyre = "0.6.8"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.8"
hyper = "0.14.20"
hyper-rustls = { version = "0.24", features = ["webpki-roots", "http2"] }
im = "15"
itertools = "0.10.5"
lru = "0.10"
mockall = "0.11.4"
nonempty = "0.9.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
prometheus-http-query = { version = "0.6.6", default_features = false, features = [
  "rustls-tls",
] }
prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
prost = "0.12.3"
prost-build = "0.12.3"
protobuf = { version = "2.28", features = ["with-bytes"] }
protobuf-src = "1.1.0"
quinn-proto = "^0.10.5"
rand = "0.8.5"
reqwest = { version = "0.11.20", default_features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
roaring = "0.10.1"
rocksdb = { version = "0.21.0", features = [
  "snappy",
  "lz4",
  "zstd",
  "zlib",
  "multi-threaded-cf",
], default-features = false }
rustls = { version = "0.21.12", features = ["dangerous_configuration"] }
schemars = { version = "0.8.10", features = ["either"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.95", features = [
  "preserve_order",
  "arbitrary_precision",
] }
serde-name = "0.2.1"
serde_with = { version = "2.1.0", features = ["hex"] }
snap = "1.1.0"
static_assertions = "1.1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"
tap = "1.0.1"
tempfile = "3.3.0"
thiserror = "1.0.40"
tokio = "1.36.0"
tokio-retry = "0.3"
tokio-rustls = "0.24"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = "0.7.10"
tonic = { version = "0.11", features = ["transport"] }
tonic-build = { version = "0.11", features = ["prost", "transport"] }
tonic-health = "0.11"
tower = { version = "0.4.12", features = [
  "full",
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.3.4", features = [
  "cors",
  "full",
  "trace",
  "set-header",
  "propagate-header",
] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }