[package]
name = "scalaris"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Scalaris <developerb@scalar.org>"]
edition = "2021"
publish = false

[dependencies]
# consensus-common = { git = "https://github.com/scalarorg/common", branch = "common_get_validator_info", package = "consensus-common" }
anemo.workspace = true
anemo-tower.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
arbitrary.workspace = true
arc-swap.workspace = true
async-stream = "0.3.5"
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
bin-version.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
futures.workspace = true
hex.workspace = true
im.workspace = true
itertools.workspace = true
lru.workspace = true
mockall.workspace = true
consensus-config.workspace = true
consensus-core.workspace = true
mysten-common.workspace = true
mysten-metrics.workspace = true
mysten-network.workspace = true
narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-executor.workspace = true
narwhal-network.workspace = true
narwhal-node.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
narwhal-test-utils.workspace = true
nonempty.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
prost.workspace = true
rand.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
roaring.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde-name.workspace = true
serde_with.workspace = true
schemars.workspace = true
shared-crypto.workspace = true
snap.workspace = true
static_assertions.workspace = true
strum.workspace = true
sui-archival.workspace = true
sui-config.workspace = true
sui-core.workspace = true
sui-protocol-config.workspace = true
sui-macros.workspace = true
sui-network.workspace = true
sui-storage.workspace = true
sui-swarm-config.workspace = true
sui-tls.workspace = true
sui-types.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
typed-store-derive.workspace = true
typed-store.workspace = true
# nom = "7.1.3"

[build-dependencies]
# prost-build = { version = "0.12.4" }
tonic-build.workspace = true
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }